@@ -56,7 +56,8 @@ public class RealScoreboardCommand extends CommandBase {
     @Default
     @SuppressWarnings("unused")
     public void defaultcmd(final CommandSender commandSender) {
-        if (commandSender instanceof Player p && (p.isOp() || p.hasPermission("realscoreboard.admin"))) {
+        if (commandSender instanceof Player && (commandSender.isOp() || commandSender.hasPermission("realscoreboard.admin"))) {
+            final Player p = (Player) commandSender;
             //TODO: CONFIG GUI
             SettingsGUI s = new SettingsGUI(p, rsa);
             s.openInventory(p);
@@ -78,7 +79,8 @@ public class RealScoreboardCommand extends CommandBase {
     @Permission("realscoreboard.toggle")
     @SuppressWarnings("unused")
     public void togglecmd(final CommandSender commandSender) {
-        if (commandSender instanceof Player p) {
+        if (commandSender instanceof Player) {
+            final Player p = (Player) commandSender;
             RSBPlayer hook = rsa.getPlayerManagerAPI().getPlayer(p.getUniqueId());
             hook.setRealScoreboardVisible(!hook.isRealScoreboardVisible());
             Text.send(p, RSBConfig.file().getString("Config.Messages.Scoreboard-Toggle." + (hook.isRealScoreboardVisible() ? "ON" : "OFF")));
@@ -105,7 +107,8 @@ public class RealScoreboardCommand extends CommandBase {
     @Permission("realscoreboard.toggle")
     @SuppressWarnings("unused")
     public void offcmd(final CommandSender commandSender) {
-        if (commandSender instanceof Player p) {
+        if (commandSender instanceof Player) {
+            final Player p = (Player) commandSender;
             RSBPlayer hook = rsa.getPlayerManagerAPI().getPlayer(p.getUniqueId());
             hook.setRealScoreboardVisible(false);
             Text.send(p, RSBConfig.file().getString("Config.Messages.Scoreboard-Toggle.OFF"));
@@ -118,7 +121,8 @@ public class RealScoreboardCommand extends CommandBase {
     @Permission("realscoreboard.toggle")
     @SuppressWarnings("unused")
     public void oncmd(final CommandSender commandSender) {
-        if (commandSender instanceof Player p) {
+        if (commandSender instanceof Player) {
+            final Player p = (Player) commandSender;
             RSBPlayer hook = rsa.getPlayerManagerAPI().getPlayer(p.getUniqueId());
             hook.setRealScoreboardVisible(true);
             Text.send(p, RSBConfig.file().getString("Config.Messages.Scoreboard-Toggle.ON"));
@@ -133,7 +137,8 @@ public class RealScoreboardCommand extends CommandBase {
     @Permission("realscoreboard.selectscoreboard")
     @SuppressWarnings("unused")
     public void selectscoreboardcmd(final CommandSender commandSender, Player target) {
-        if (commandSender instanceof Player p) {
+        if (commandSender instanceof Player) {
+            final Player p = (Player) commandSender;
             if (target == null) {
                 Text.send(commandSender, "Player not found.");
                 return;
@@ -189,7 +194,8 @@ public class RealScoreboardCommand extends CommandBase {
     @SuppressWarnings("unused")
     @WrongUsage("&cUsage: /rsb announce <seconds> <player>")
     public void announcecmd(final CommandSender commandSender, Integer seconds, @Optional Player p) {
-        if (commandSender instanceof Player myPlayer) {
+        if (commandSender instanceof Player) {
+            final Player myPlayer = (Player) commandSender;
             new AnvilGUI.Builder()
                     .onClose(stateSnapshot -> {
                     })
@@ -204,7 +210,7 @@ public class RealScoreboardCommand extends CommandBase {
                             rsa.getPlayerManagerAPI().getPlayer(p.getUniqueId()).announce(stateSnapshot.getText(), seconds);
                         }
 
-                        return List.of(AnvilGUI.ResponseAction.close());
+                        return Arrays.asList(AnvilGUI.ResponseAction.close());
                     })
                     .preventClose()                                                    //prevents the inventory from being closed
                     .text("Sample Message")                              //sets the text the GUI should start with
